// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/docker/common getRegistryRepository handles local registries 1`] = `
Object {
  "registry": "https://registry:5000",
  "repository": "org/package",
}
`;

exports[`datasource/docker/common getRegistryRepository supports http registryUrls 1`] = `
Object {
  "registry": "http://my.local.registry/prefix",
  "repository": "image",
}
`;

exports[`datasource/docker/common getRegistryRepository supports registryUrls 1`] = `
Object {
  "registry": "https://my.local.registry/prefix",
  "repository": "image",
}
`;

exports[`datasource/docker/common getRegistryRepository supports schemeless registryUrls 1`] = `
Object {
  "registry": "https://my.local.registry/prefix",
  "repository": "image",
}
`;
